kubernetes/cuppa-finance-stats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-stats
  namespace: cuppa
  labels:
    app: finance-stats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finance-stats
  template:
    metadata:
      labels:
        app: finance-stats
    spec:
      containers:
        - name: finance-stats
          image: localhost:5000/cuppa/finance-stats
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 3030
---
apiVersion: v1
kind: Service
metadata:
  name: finance-stats
  namespace: cuppa
spec:
  selector:
    app: finance-stats
  ports:
    - protocol: TCP
      port: 3031
      targetPort: 3031
      nodePort: 30031
  type: NodePort
